--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "antd": "^5.24.3",
     "axios": "^1.8.2",
     "cra-template": "1.2.0",
+    "moment": "^2.30.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.5.0",
