--- a/package.json
+++ b/package.json
@@ -6,10 +6,12 @@
     "@ant-design/icons": "^5.6.1",
     "antd": "^5.24.3",
     "axios": "^1.8.2",
+    "chart.js": "^4.4.9",
     "cra-template": "1.2.0",
     "framer-motion": "^12.6.3",
     "moment": "^2.30.1",
     "react": "^18.3.1",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^18.3.1",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.2.0",
