--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@ant-design/icons": "^5.6.1",
+    "@microsoft/signalr": "^8.0.7",
     "antd": "^5.24.3",
     "axios": "^1.8.2",
     "chart.js": "^4.4.9",
